auth flow updated but needs changed logic

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,10 @@
     <title>Graph Database</title>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
     <link rel="stylesheet" type="text/css" href="index.css" />
-    
 </head>
 <body>
     <div id="root">
-        <div id="navbar"></div>
+        <div id="nav"></div>
         <div id="app"></div>
     </div>
 
