--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     /> -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Graph Database</title>
+    <title>ContechOS</title>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
     <!-- <link rel="stylesheet" type="text/css" href="index.css" /> -->
     <link
