--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       src="https://kit.fontawesome.com/dec7c4d373.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div id="root">
