--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,15 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <script
+    <!-- <script
       src="https://kit.fontawesome.com/dec7c4d373.js"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
