can change data view in props

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
   <body>
     <div id="root">
       <div id="nav"></div>
+      <div id="toolBar"></div>
       <div id="app"></div>
     </div>
 
